Alteration in reviews section

--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
             </div>
         </section>
         <section class="reviews">
-                <h4 class="h4--1">The most promising law firm has arrived in Quebec!</h4>
+                <h4 class="h4--1">"The most promising law firm has arrived in Quebec!"</h4>
                 <img src="img/canadian_lawyer_logo.svg" alt="Canadian Lawyer Logo" class="magazine-logo logo--1">
 
-                <h4 class="h4--3">A team with a lot of diversity and awarded all over the world</h4>
-                <img src="img/law_times_logo.svg" alt="Canadian Lawyer Logo" class="magazine-logo logo--3">
+                <h4 class="h4--3">"The most international and modern office in Canada this year!"</h4>
+                <img src="img/law_times_logo.svg" alt="Canadian Lawyer Logo" class="magazine-logo logo--1">
            
-                <h4 class="h4--2">The most international and modern office in Canada this year</h4>
+                <h4 class="h4--2">
+                    "A team with a lot of diversity and awarded all over the world."
+                </h4>
                 <img src="img/lexpert_logo.svg" alt="Canadian Lawyer Logo" class="magazine-logo">
         </section>
 
